--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,65 +79,94 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: oklch(0.145 0 0);
-    --foreground: oklch(0.985 0 0);
-    --card: oklch(0.205 0 0);
-    --card-foreground: oklch(0.985 0 0);
-    --popover: oklch(0.205 0 0);
-    --popover-foreground: oklch(0.985 0 0);
-    --primary: oklch(0.922 0 0);
-    --primary-foreground: oklch(0.205 0 0);
-    --secondary: oklch(0.269 0 0);
-    --secondary-foreground: oklch(0.985 0 0);
-    --muted: oklch(0.269 0 0);
-    --muted-foreground: oklch(0.708 0 0);
-    --accent: oklch(0.269 0 0);
-    --accent-foreground: oklch(0.985 0 0);
-    --destructive: oklch(0.704 0.191 22.216);
-    --destructive-foreground: 210 40% 98%;
-    --border: oklch(1 0 0 / 10%);
-    --input: oklch(1 0 0 / 15%);
-    --ring: oklch(0.556 0 0);
-    --chart-1: oklch(0.488 0.243 264.376);
-    --chart-2: oklch(0.696 0.17 162.48);
-    --chart-3: oklch(0.769 0.188 70.08);
-    --chart-4: oklch(0.627 0.265 303.9);
-    --chart-5: oklch(0.645 0.246 16.439);
+    --background: oklch(14.05% 0.0044 285.82);
+    --foreground: oklch(98.38% 0.0035 247.86);
+
+    --card: oklch(13.71% 0.036 258.53);
+    --card-foreground: oklch(98.38% 0.0035 247.86);
+
+    --popover: oklch(13.71% 0.036 258.53);
+    --popover-foreground: oklch(98.38% 0.0035 247.86);
+
+    --primary: oklch(62.32% 0.1879 259.8);
+    --primary-foreground: oklch(20.79% 0.0399 265.73);
+
+    --secondary: oklch(28% 0.0369 259.97);
+    --secondary-foreground: oklch(98.38% 0.0035 247.86);
+
+    --muted: oklch(28% 0.0369 259.97);
+    --muted-foreground: oklch(71.07% 0.0351 256.79);
+
+    --accent: oklch(28% 0.0369 259.97);
+    --accent-foreground: oklch(98.38% 0.0035 247.86);
+
+    --destructive: oklch(39.59% 0.1331 25.72);
+    --destructive-foreground: oklch(98.38% 0.0035 247.86);
+
+    --border: oklch(28% 0.0369 259.97);
+    --input: oklch(28% 0.0369 259.97);
+    --ring: oklch(48.78% 0.217 264.39);
+
+    --chart-1: oklch(52.92% 0.1931 262.13);
+    --chart-2: oklch(69.83% 0.1337 165.46);
+    --chart-3: oklch(72.32% 0.15 60.63);
+    --chart-4: oklch(61.92% 0.2037 312.73);
+    --chart-5: oklch(61.23% 0.2093 6.39);
+
+    --sidebar: oklch(13.71% 0.036 258.53);
+    --sidebar-foreground: oklch(98.38% 0.0035 247.86);
+    --sidebar-primary: oklch(62.32% 0.1879 259.8);
+    --sidebar-primary-foreground: oklch(20.79% 0.0399 265.73);
+    --sidebar-accent: oklch(28% 0.0369 259.97);
+    --sidebar-accent-foreground: oklch(98.38% 0.0035 247.86);
+    --sidebar-border: oklch(28% 0.0369 259.97);
+    --sidebar-ring: oklch(48.78% 0.217 264.39);
   }
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --background: oklch(14.05% 0.0044 285.82);
+  --foreground: oklch(98.38% 0.0035 247.86);
+
+  --card: oklch(13.71% 0.036 258.53);
+  --card-foreground: oklch(98.38% 0.0035 247.86);
+
+  --popover: oklch(13.71% 0.036 258.53);
+  --popover-foreground: oklch(98.38% 0.0035 247.86);
+
+  --primary: oklch(62.32% 0.1879 259.8);
+  --primary-foreground: oklch(20.79% 0.0399 265.73);
+
+  --secondary: oklch(28% 0.0369 259.97);
+  --secondary-foreground: oklch(98.38% 0.0035 247.86);
+
+  --muted: oklch(28% 0.0369 259.97);
+  --muted-foreground: oklch(71.07% 0.0351 256.79);
+
+  --accent: oklch(28% 0.0369 259.97);
+  --accent-foreground: oklch(98.38% 0.0035 247.86);
+
+  --destructive: oklch(39.59% 0.1331 25.72);
+  --destructive-foreground: oklch(98.38% 0.0035 247.86);
+
+  --border: oklch(28% 0.0369 259.97);
+  --input: oklch(28% 0.0369 259.97);
+  --ring: oklch(48.78% 0.217 264.39);
+
+  --chart-1: oklch(52.92% 0.1931 262.13);
+  --chart-2: oklch(69.83% 0.1337 165.46);
+  --chart-3: oklch(72.32% 0.15 60.63);
+  --chart-4: oklch(61.92% 0.2037 312.73);
+  --chart-5: oklch(61.23% 0.2093 6.39);
+
+  --sidebar: oklch(13.71% 0.036 258.53);
+  --sidebar-foreground: oklch(98.38% 0.0035 247.86);
+  --sidebar-primary: oklch(62.32% 0.1879 259.8);
+  --sidebar-primary-foreground: oklch(20.79% 0.0399 265.73);
+  --sidebar-accent: oklch(28% 0.0369 259.97);
+  --sidebar-accent-foreground: oklch(98.38% 0.0035 247.86);
+  --sidebar-border: oklch(28% 0.0369 259.97);
+  --sidebar-ring: oklch(48.78% 0.217 264.39);
 }
 
 @layer base {
@@ -146,5 +175,11 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .page {
+    @apply w-full h-screen min-h-full flex;
   }
 }
