--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,37 +6,38 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
+  --background: oklch(100% 0 0);
+  --foreground: oklch(13.71% 0.036 258.53);
+  --card: oklch(100% 0 0);
+  --card-foreground: oklch(13.71% 0.036 258.53);
+  --popover: oklch(100% 0 0);
+  --popover-foreground: oklch(13.71% 0.036 258.53);
+  --primary: oklch(54.6% 0.2153 262.87);
+  --primary-foreground: oklch(98.38% 0.0035 247.86);
+  --secondary: oklch(96.84% 0.0068 247.9);
+  --secondary-foreground: oklch(20.79% 0.0399 265.73);
+  --muted: oklch(96.84% 0.0068 247.9);
+  --muted-foreground: oklch(55.47% 0.0407 257.44);
+  --accent: oklch(96.84% 0.0068 247.9);
+  --accent-foreground: oklch(20.79% 0.0399 265.73);
+  --destructive: oklch(63.68% 0.2078 25.33);
+  --destructive-foreground: oklch(98.38% 0.0035 247.86);
+  --border: oklch(92.9% 0.0126 255.53);
+  --input: oklch(92.9% 0.0126 255.53);
+  --ring: oklch(54.6% 0.2153 262.87);
+  --chart-1: oklch(67.72% 0.1571 35.19);
+  --chart-2: oklch(63.09% 0.1013 183.49);
+  --chart-3: oklch(37.87% 0.044 225.54);
+  --chart-4: oklch(83.36% 0.1186 88.15);
+  --chart-5: oklch(78.34% 0.1261 58.75);
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
   --sidebar-primary-foreground: oklch(0.985 0 0);
   --sidebar-accent: oklch(0.97 0 0);
   --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --sidebar-border: oklch(92.9% 0.0126 255.53);
+  --sidebar-ring: oklch(54.6% 0.2153 262.87);
 }
 
 @theme inline {
