--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -177,6 +177,10 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  button {
+    @apply cursor-pointer;
+  }
 }
 
 @layer utilities {
